updating run of data wrangling

--- a/data-wrangling/Data-Wrangling.ipynb
+++ b/data-wrangling/Data-Wrangling.ipynb
@@ -25,7 +25,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "37e7c0b6e9b94c3aaad4ca77345dad17",
+       "model_id": "5d9fbadc6c4e473997a98db6ca2d77ee",
        "version_major": 2,
        "version_minor": 0
       },
@@ -47,7 +47,7 @@
      "data": {
       "text/html": [
        "<table>\n",
-       "<tr><th>ID</th><th>YARN Application ID</th><th>Kind</th><th>State</th><th>Spark UI</th><th>Driver log</th><th>Current session?</th></tr><tr><td>21</td><td>application_1575479622115_0022</td><td>pyspark</td><td>idle</td><td></td><td></td><td>✔</td></tr></table>"
+       "<tr><th>ID</th><th>YARN Application ID</th><th>Kind</th><th>State</th><th>Spark UI</th><th>Driver log</th><th>Current session?</th></tr><tr><td>0</td><td>application_1581454051645_0001</td><td>pyspark</td><td>idle</td><td><a target=\"_blank\" href=\"http://ip-172-31-20-20.ec2.internal:20888/proxy/application_1581454051645_0001/\">Link</a></td><td><a target=\"_blank\" href=\"http://ip-172-31-29-86.ec2.internal:8042/node/containerlogs/container_1581454051645_0001_01_000001/livy\">Link</a></td><td>✔</td></tr></table>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -95,7 +95,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<pyspark.sql.session.SparkSession object at 0x7febf1f19908>"
+      "<pyspark.sql.session.SparkSession object at 0x7f77e3b74b38>"
      ]
     }
    ],
@@ -124,7 +124,7 @@
      "data": {
       "text/html": [
        "<table>\n",
-       "<tr><th>ID</th><th>YARN Application ID</th><th>Kind</th><th>State</th><th>Spark UI</th><th>Driver log</th><th>Current session?</th></tr><tr><td>21</td><td>application_1575479622115_0022</td><td>pyspark</td><td>idle</td><td><a target=\"_blank\" href=\"http://ip-172-31-22-40.ec2.internal:20888/proxy/application_1575479622115_0022/\">Link</a></td><td><a target=\"_blank\" href=\"http://ip-172-31-22-240.ec2.internal:8042/node/containerlogs/container_1575479622115_0022_01_000001/livy\">Link</a></td><td>✔</td></tr></table>"
+       "<tr><th>ID</th><th>YARN Application ID</th><th>Kind</th><th>State</th><th>Spark UI</th><th>Driver log</th><th>Current session?</th></tr><tr><td>0</td><td>application_1581454051645_0001</td><td>pyspark</td><td>idle</td><td><a target=\"_blank\" href=\"http://ip-172-31-20-20.ec2.internal:20888/proxy/application_1581454051645_0001/\">Link</a></td><td><a target=\"_blank\" href=\"http://ip-172-31-29-86.ec2.internal:8042/node/containerlogs/container_1581454051645_0001_01_000001/livy\">Link</a></td><td>✔</td></tr></table>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -146,7 +146,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5488414eb2974d3bad9a07933dc18371",
+       "model_id": "2412caa95f9b4c93babfcabfb27b7861",
        "version_major": 2,
        "version_minor": 0
       },
@@ -178,6 +178,44 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "d1cce6620d48456e818439488f03a606",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "VBox()"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "FloatProgress(value=0.0, bar_style='info', description='Progress:', layout=Layout(height='25px', width='50%'),…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "from pyspark.sql.functions import date_format"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -186,13 +224,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4ff3528b5d654aaba0b3cf6f36fc6413",
+       "model_id": "e4fb3eabcd244cc992eafd217d86f96f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -224,13 +262,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f3e7b67b298347c798b3850d9e0fa321",
+       "model_id": "79d3ae2ffae44042bf0b6da816c72123",
        "version_major": 2,
        "version_minor": 0
       },
@@ -259,7 +297,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1429172"
+      "3654655"
      ]
     }
    ],
@@ -276,13 +314,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e5b50775dec248d1b5e3b7ee392c11da",
+       "model_id": "a77601856c8247788df338444a5d7824",
        "version_major": 2,
        "version_minor": 0
       },
@@ -317,18 +355,117 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Next, we get rid of duplicates.  The crawling process will often get the same URL multiple times because we run it under different conditions, and there is overlap when we do an incremental crawl.  We consider it to be a duplication if the URL and date_publish are the same."
+    "Next, remove data for sites that have been eliminated from consideration."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d09e343f320d40399921f2abe4fb88ba",
+       "model_id": "a932e38bf88c47a9b9a1de9740629cdb",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "VBox()"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "FloatProgress(value=0.0, bar_style='info', description='Progress:', layout=Layout(height='25px', width='50%'),…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "not_enough_data = [\"'bloomberg.com'\",\n",
+    "\"'bostonglobe.com'\",\n",
+    "\"'mediate.com'\",\n",
+    "\"'nationalreview.com'\",\n",
+    "\"'theguardian.com'\",\n",
+    "\"'usatoday.com'\"]\n",
+    "\n",
+    "clause = \"source_domain not in (\" + ', '.join(not_enough_data) + \")\"\n",
+    "\n",
+    "clean_df = clean_df.filter(clause)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "9ffaf7bd550b4d738d9377a60667e648",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "VBox()"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "FloatProgress(value=0.0, bar_style='info', description='Progress:', layout=Layout(height='25px', width='50%'),…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3652716"
+     ]
+    }
+   ],
+   "source": [
+    "clean_df.count()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Next, we get rid of duplicates.  The crawling process will often get the same URL multiple times because we run it under different conditions, and there is overlap when we do an incremental crawl.  We consider it to be a duplication if the URL and date_publish are the same."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "bb911a09ea6c4943824ccca0c456259b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -360,13 +497,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "706c7ed9b3c649c9986d7ad35caa763f",
+       "model_id": "0f3006bd957547b9897d0f86ba667735",
        "version_major": 2,
        "version_minor": 0
       },
@@ -395,7 +532,52 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1153452"
+      "2141599"
+     ]
+    }
+   ],
+   "source": [
+    "clean_df.count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "8c1cd012cbe24c28a9e7b1d27958fd94",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "VBox()"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "FloatProgress(value=0.0, bar_style='info', description='Progress:', layout=Layout(height='25px', width='50%'),…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2141599"
      ]
     }
    ],
@@ -412,13 +594,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "48a4b86f1f4c43b0b9ccecaa3ff8d79a",
+       "model_id": "3f37f403ed5449969f7a31ba0917b3df",
        "version_major": 2,
        "version_minor": 0
       },
@@ -452,18 +634,64 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We create a new column `text_or_desc` that will be used in analysis.  This uses the `text` column data, if present, and falls back to `description` if the `text` column was empty."
+    "Create `year` and `month` columns for easy grouping"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d531ae81292d4d08b9c01ecf7e809e09",
+       "model_id": "f7d348c91dc942c7a93607a804d9795e",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "VBox()"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "FloatProgress(value=0.0, bar_style='info', description='Progress:', layout=Layout(height='25px', width='50%'),…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "clean_df = clean_df.withColumn(\"year\", (date_format(col(\"published\"), 'yyyy').cast(\"int\")))\n",
+    "clean_df = clean_df.withColumn(\"month\", (date_format(col(\"published\"), 'M').cast(\"int\")))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We create a new column `text_or_desc` that will be used in analysis.  This uses the `text` column data, if present, and falls back to `description` if the `text` column was empty."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "406e31a1a0cd416aa6129148ff53bf15",
        "version_major": 2,
        "version_minor": 0
       },
@@ -503,13 +731,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b0be3d1a204c429aa4ee0e375d3a601c",
+       "model_id": "b27d08ac359742a497a907e6fec23505",
        "version_major": 2,
        "version_minor": 0
       },
@@ -549,13 +777,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c5eecee809ae41cbab630a6ceb1ce2e1",
+       "model_id": "9fe6387491ce4cfdbd088bfcdf44082c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -587,13 +815,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ac192d3c3eb44a50b5f674f9b3d19910",
+       "model_id": "d926a11cc32f4c00b2efcafa9e2dfefd",
        "version_major": 2,
        "version_minor": 0
       },
@@ -622,7 +850,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1095746"
+      "2049759"
      ]
     }
    ],
@@ -639,13 +867,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e001cb220bfc4e26bdb042d91df3a6cf",
+       "model_id": "7980f1139317470596fd2f8327ed269c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -677,13 +905,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d164025b92da4f2fbe2e97bc0410d480",
+       "model_id": "a93b8107e7d7441aa0fdc50b7797ff2f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -712,7 +940,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1036546"
+      "1989807"
      ]
     }
    ],
@@ -731,13 +959,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d836678540a949c9869aea9bd8a76d98",
+       "model_id": "f81b708850804b87b96b936d26d1eeaf",
        "version_major": 2,
        "version_minor": 0
       },
@@ -765,6 +993,44 @@
    ],
    "source": [
     "clean_df.write.parquet(\"s3://topic-sentiment-1/clean-data\", mode=\"overwrite\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "c93f4173a11c42849908e632ca70b892",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "VBox()"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "FloatProgress(value=0.0, bar_style='info', description='Progress:', layout=Layout(height='25px', width='50%'),…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "clean_df.write.json(\"s3://topic-sentiment-1/clean-json-data\", mode=\"overwrite\")"
    ]
   }
  ],
